--- a/Flowers/assets/styles/colors.scss
+++ b/Flowers/assets/styles/colors.scss
@@ -6,8 +6,8 @@ $N500: #3f4752;
 $N600: #2F353D;
 $N700: #202328;
 $N700: #17191C;
-$N800: #8F3B01;
-$N900: #793100;
-$N1000: #241814;
-$N1100: #D1BFA3;
-$N1200: #000;
+$button: #8F3B01;
+$links: #793100;
+$header: #241814;
+$cards: #D1BFA3;
+$black: #000;
