--- a/Flowers/assets/styles/index.scss
+++ b/Flowers/assets/styles/index.scss
@@ -1,5 +1,9 @@
-@import "./colors.scss";
-@import "./fonts.scss";
-@import "./null.scss";
-@import "./grid.scss";
-@import "./breakpoints.scss";
+@import './colors.scss';
+@import './fonts.scss';
+@import './null.scss';
+@import './grid.scss';
+@import './breakpoints.scss';
+
+.scroll {
+  overflow: hidden;
+}
